RESOLVED FIXED92507
[EFL] Regression(r123858): Default navigation policy decision was switched to "reject"
https://bugs.webkit.org/show_bug.cgi?id=92507
Summary [EFL] Regression(r123858): Default navigation policy decision was switched to...
Chris Dumez
Reported 2012-07-27 07:52:07 PDT
http://trac.webkit.org/changeset/123858 changed the return values of a few functions, one of them being ewk_view_navigation_policy_decision(). The function used to return true (request is accepted) when the client does not handle the decision, now it returns false (request is rejected).
Attachments
Patch (2.35 KB, patch)
2012-07-27 07:55 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-07-27 07:55:00 PDT
Thiago Marcos P. Santos
Comment 2 2012-07-27 08:19:03 PDT
LGTM. For the records: first regression caught on the bots by the API unit tests.
Chris Dumez
Comment 3 2012-07-27 08:20:38 PDT
(In reply to comment #2) > LGTM. For the records: first regression caught on the bots by the API unit tests. Yay! :)
Kentaro Hara
Comment 4 2012-07-27 08:44:21 PDT
Comment on attachment 154952 [details] Patch OK
WebKit Review Bot
Comment 5 2012-07-27 10:34:44 PDT
Comment on attachment 154952 [details] Patch Clearing flags on attachment: 154952 Committed r123883: <http://trac.webkit.org/changeset/123883>
WebKit Review Bot
Comment 6 2012-07-27 10:34:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.