[EFL] Regression(r123858): Default navigation policy decision was switched to "reject" https://bugs.webkit.org/show_bug.cgi?id=92507

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-07-27
Reviewed by Kentaro Hara.

After r92466, the default navigation policy is to reject the request if the
client does not make a decision explicitly. The default policy should be
to accept. This broke ewk_view unit tests.

* ewk/ewk_view.cpp:
(ewk_view_navigation_policy_decision):

Canonical link: https://commits.webkit.org/110318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123883 268f45cc-cd09-0410-ab3c-d52691b4dbfc